[package]
name = "pinocchio-mpl-token-metadata"
description = "Metaplex Token Metadata SDK for Pinocchio"
edition = "2021"
version = "5.1.1"
readme = "./README.md"

documentation = "https://docs.rs/pinocchio-mpl-token-metadata/latest/pinocchio-mpl-token-metadata/"
repository = "https://github.com/AceApeDev/pinocchio-mpl-token-metadata"
keywords = ["solana", "crypto"]
# categories = ["command-line-utilities"]
rust-version = "1.84"

[lib]
crate-type = ["rlib"]

[features]
std = []

[dependencies]
pinocchio = { version = "^0.9.0" }
pinocchio-pubkey = { version = "^0.3.0"}
bytemuck = { version = "^1.23.0", features = ["derive"] }
