[package]
name = "pinocchio-mpl-token-metadata"
description = "Metaplex Token Metadata SDK for Pinocchio"
edition = "2021"
version = "1.0.0"
license = "MIT"
readme = "./README.md"

documentation = "https://docs.rs/pinocchio-mpl-token-metadata/latest/pinocchio-mpl-token-metadata/"
repository = "https://github.com/AceApeDev/pinocchio-mpl-token-metadata"
keywords = ["solana", "crypto"]

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { version = "^0.9.0" }
pinocchio-pubkey = { version = "^0.3.0"}
